--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@
 *.DS_Store
 *.log
 *.user
+*.json
+*.map
+*.wad
+*.savegame
+amdgpu-loader
+doomgeneric/doomgeneric
+*.cache/
+build/
 *~
 .vs/
 Debug/
