Add README.md for the loader utilities

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 *.map
 *.wad
 *.savegame
-amdgpu-loader
+amdgpu-loader/amdgpu-loader
+nvidia-loader/nvidia-loader
 doomgeneric/doomgeneric
 *.cache/
 build/
